--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 </head>
 <body>
-
+    <div>
 	<h1>Welcome to the Circle Game</h1>
 	<div id="circle1" class="circlesoflove"></div>
 	<div id="circle2" class="circlesoflove"></div>
@@ -24,5 +24,6 @@
 		<button onclick="location.href='test.html';"><a href="test.html">Start Game</a></button>
 		<button>View High Scores</button>
 	</div>
+    </div>
 </body>
 </html>
