--- a/test.html
+++ b/test.html
@@ -15,8 +15,12 @@
 
 <body>
 	<div id="header">
-		<h1>The Circle Game</h2>
+		<h1 >The Circle Game</h1>
+    
 	</div>
+    <div id="startdiv">
+        <button id="start">Begin!</button>
+    </div>
 	<br>
 	<div id="testcontainer">
 		<svg height="300" width="300">
@@ -32,7 +36,7 @@
 		<input type="range" min="1" max="135" value="135" class="slider" id="myRange">
 	</div>
 	<div id="bottom">
-			<p>Score: <span id="score"></span></p>
+			<p>Score: <span id="score">0</span></p>
 	</div>
 <script src="test.js"></script>
 </body>
