--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Circle Game</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<!--      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
 </head>
 <body>
     <div>
