--- a/test.html
+++ b/test.html
@@ -13,31 +13,34 @@
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </head>
 
-<body>
-	<div id="header">
-		<h1 >The Circle Game</h1>
-    
-	</div>
-    <div id="startdiv">
-        <button id="start">Begin!</button>
+<body onload="loader();">
+    <div id="loader"></div>
+    <div id="main">
+        <div id="header">
+            <h1 >The Circle Game</h1>
+
+        </div>
+        <div id="startdiv">
+            <button id="start">Begin!</button>
+        </div>
+        <br>
+        <div id="testcontainer">
+            <svg height="300" width="300">
+                <circle id="circle" cy="150" cx="150"r="135" stroke="steelblue" stroke-width="15" fill="none"/>
+                <circle id="circle2" cy="150" cx="150"r="1" stroke="white" stroke-width="15" fill="none"/>
+                <circle id="ouch" cy="150" cx="150"r="500" stroke="red" stroke-width="15" fill="none"/>
+                Sorry, your browser does not support inline SVG.  
+            </svg> 
+        </div>
+        <br>
+        <br>
+        <div id="slidecontainer">
+            <input type="range" min="1" max="135" value="135" class="slider" id="myRange">
+        </div>
+        <div id="bottom">
+                <p>Score: <span id="score">0</span></p>
+        </div>
     </div>
-	<br>
-	<div id="testcontainer">
-		<svg height="300" width="300">
-			<circle id="circle" cy="150" cx="150"r="135" stroke="steelblue" stroke-width="15" fill="none"/>
-			<circle id="circle2" cy="150" cx="150"r="1" stroke="black" stroke-width="15" fill="none"/>
-			<circle id="ouch" cy="150" cx="150"r="500" stroke="red" stroke-width="15" fill="none"/>
-			Sorry, your browser does not support inline SVG.  
-		</svg> 
-	</div>
-	<br>
-	<br>
-	<div id="slidecontainer">
-		<input type="range" min="1" max="135" value="135" class="slider" id="myRange">
-	</div>
-	<div id="bottom">
-			<p>Score: <span id="score">0</span></p>
-	</div>
 <script src="test.js"></script>
 </body>
 </html>
