--- a/test.html
+++ b/test.html
@@ -16,6 +16,15 @@
 <body onload="loader();">
     <div id="loader"></div>
     <div id="main">
+        <div class="white" id="menuIcon" onclick="showMenu()">
+            <p>&#9776;</p>
+        </div>
+        <div class="hide" id="menu">
+            <p>How to Play</p>
+            <p>Its really easy. Hit "Begin!" and then slide the blue slider. The blue circle will
+            change size. Match the blue circle to the white as many times as you can without touching the red 
+            circle. Hurry though, you only have 15 seconds!</p>
+        </div>
         <div id="header">
             <h1 >The Circle Game</h1>
 
