--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <br>
         <br>
 	<div class="buttons">
-		<button onclick="location.href='test.html';"><a href="test.html">Start Game</a></button>
+		<button onclick="location.href='test.html';">Start Game</button>
 	</div>
     </div>
 </body>
