--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
         </div>
         <div class="hide" id="menu">
             <h4 id="howToPlay" class="items"onclick="showPlay()">How to Play</h4>
-            <p id="play" class="none">Its really easy. Hit "Click to Begin!" and then slide the blue slider. The blue circle will change size. Match the blue circle to the white as many times as you can without touching the red 
+            <p id="play" class="none">Its really easy. Hit "Begin" and then slide the white circle at the bottom horizontally. The blue circle will change size. Match the blue circle to the white as many times as you can without touching the red 
             circle. Hurry though, you only have 15 seconds!</p>
             <h4 class="items" onclick="showScores()">Top 5 Scores</h4>
             <div class="none" id="scores">
@@ -37,7 +37,7 @@
 
         </div>
         <div id="startdiv">
-            <button id="start">Click to Begin!</button>
+            <button id="start">Click Here to Begin</button>
         </div>
         <br>
         <div id="testcontainer">
