--- a/test.html
+++ b/test.html
@@ -31,6 +31,7 @@
                 <p  id="score4">Score Place Holder</p>
                 <p  id="score5">Score Place Holder</p>
             </div>
+			<h4 class="items"onclick="location.href='index.html';">Landing Page</h4>
         </div>
         <div id="header">
             <h1 >The Circle Game</h1>
