--- a/test.html
+++ b/test.html
@@ -23,13 +23,9 @@
             <h4 id="howToPlay" class="items"onclick="showPlay()">How to Play</h4>
             <p id="play" class="none">Its really easy. Hit "Begin" and then slide the white circle at the bottom horizontally. The blue circle will change size. Match the blue circle to the white as many times as you can without touching the red 
             circle. Hurry though, you only have 15 seconds!</p>
-            <h4 class="items" onclick="showScores()">Top 5 Scores</h4>
+            <h4 class="items" onclick="showScores()">High Score</h4>
             <div class="none" id="scores">
-                <p  id="score1">Score Place Holder</p>
-                <p  id="score2">Score Place Holder</p>
-                <p  id="score3">Score Place Holder</p>
-                <p  id="score4">Score Place Holder</p>
-                <p  id="score5">Score Place Holder</p>
+                <p id="highScore">Score Place Holder</p>
             </div>
 			<h4 class="items"onclick="location.href='index.html';">Landing Page</h4>
         </div>
