--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>test</title>
+    <title>The Circle Game</title>
     <meta name="description" content="My Website">
     <meta name="author" content="Aj Dugger">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -53,6 +53,9 @@
         <div id="bottom">
                 <p>Score: <span id="score">0</span></p>
         </div>
+		<div class="hide" id="newHighScore">
+			<h2>New High Score: <span id="newHighScoreValue"></h2>
+		</div>
     </div>
 <script src="test.js"></script>
 </body>
