Added demo video

--- a/test.html
+++ b/test.html
@@ -24,6 +24,10 @@
             <h4 id="howToPlay" class="items"onclick="showPlay()">How to Play</h4>
                 <p id="play" class="none">Its really easy. Hit "Begin" and then slide the white circle at the bottom horizontally. The blue circle will change size. Match the blue circle to the white as many times as you can without touching the red 
                 circle. Hurry though, you only have 30 seconds!</p>
+				<video id="demo" class="none"  height="300" controls>
+					<source src="demo.mp4" type="video/mp4" >
+					Your browser does not support the video tag.
+				</video>
             <h4 class="items" onclick="showScores()">High Score</h4>
                 <div class="none" id="scores">
                     <p id="highScore">Score Place Holder</p>
