--- a/test.html
+++ b/test.html
@@ -42,8 +42,8 @@
             <button id="start">Click Here to Begin</button>
         </div>
         <br>
-        <div id="testcontainer">
-            <svg xmlns="https://www.w3.org/TR/SVG/" height="300" width="300">
+        <div xmlns="https://www.w3.org/TR/SVG/" id="testcontainer">
+            <svg  height="300" width="300">
                 <circle id="circle" cy="150" cx="150"r="135" stroke="steelblue" stroke-width="15" fill="none"/>
                 <circle id="circle2" cy="150" cx="150"r="1" stroke="white" stroke-width="15" fill="none"/>
                 <circle id="ouch" cy="150" cx="150"r="500" stroke="red" stroke-width="15" fill="none"/>
