--- a/test.html
+++ b/test.html
@@ -33,6 +33,8 @@
                     <p id="highScore">Score Place Holder</p>
                 </div>
 			<h4 class="items"onclick="location.href='index.html';">Landing Page</h4>
+			<h4 class="items" onclick="showAbout()">About</h4>
+				<p class="none" id="about">Version 2.1</p>
         </div>
         <div id="header">
             <h1 >The Circle Game</h1>
