--- a/test.html
+++ b/test.html
@@ -32,9 +32,17 @@
                 <div class="none" id="scores">
                     <p id="highScore">Score Place Holder</p>
                 </div>
+			<h4 class="items" onclick="showThemes()">Themes</h4>
+				<div id="themes" class ="none">
+					<p onclick="theme(2)" id="blueTheme">Blue</p>
+					<p onclick="theme(1)" id="greenTheme">Green</p>
+					<p onclick="theme(0)" id="orangeTheme">Orange</p>
+					<p onclick="theme(3)" id="purpleTheme">Purple</p>
+				</div>
+			
 			<h4 class="items"onclick="location.href='index.html';">Landing Page</h4>
 			<h4 class="items" onclick="showAbout()">About</h4>
-				<p class="none" id="about">Version 2.1.2</p>
+				<p class="none" id="about">Version 2.1.6</p>
         </div>
         <div id="header">
             <h1 >The Circle Game</h1>
