--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="test.css">
 	<link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
+
     
 </head>
 
@@ -43,6 +44,7 @@
 			<h4 class="items"onclick="location.href='index.html';">Landing Page</h4>
 			<h4 class="items" onclick="showAbout()">About</h4>
 				<p class="none" id="about">Version 2.1.6</p>
+			<h4 class="items"onclick="goFull()">Go Full Screen</h4>
         </div>
         <div id="header">
             <h1 >The Circle Game</h1>
@@ -72,6 +74,7 @@
             <h2>New High Score: <span id="newHighScoreValue"></span></h2>
 		</div>
     </div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/screenfull.js/3.3.2/screenfull.min.js"></script>
 <script src="test.js"></script>
 </body>
 </html>
