--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="test.css">
 	<link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 
     
 </head>
