--- a/test.html
+++ b/test.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="test.css">
 	<link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
 	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     
 </head>
@@ -44,7 +45,7 @@
 			
 			<h4 class="items"onclick="location.href='index.html';">Landing Page</h4>
 			<h4 class="items" onclick="showAbout()">About</h4>
-				<p class="none" id="about">Version 2.1.6</p>
+				<p class="none" id="about">Version 2.2</p>
 			<h4 class="items"onclick="goFull()">Go Full Screen</h4>
         </div>
         <div id="header">
