--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-	<h1>Welcome to the Circle Game</h1>
+	<h1>Circles</h1>
 	<div id="circle1" class="circlesoflove"></div>
 	<div id="circle2" class="circlesoflove"></div>
 	<div id="circle3" class="circlesoflove"></div>
