--- a/index.html
+++ b/index.html
@@ -5,25 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
 	<meta name="apple-mobile-web-app-capable" content="yes">
-<!--      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">-->
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body>
     <div>
-	<h1>Circles</h1>
-	<div id="circle1" class="circlesoflove"></div>
-	<div id="circle2" class="circlesoflove"></div>
-	<div id="circle3" class="circlesoflove"></div>
-	<div id="circle4" class="circlesoflove"></div>
-	<div id="circle5" class="circlesoflove"></div>
-	<div id="circle6" class="circlesoflove"></div>
-	<div id="circle8" class="circlesoflove"></div>
-	<div id="circle9" class="circlesoflove"></div>
-	<div id="circle10" class="circlesoflove"></div>
-	<div id="circle11" class="circlesoflove"></div>
-	<div id="circle12" class="circlesoflove"></div>
-	<div id="circle13" class="circlesoflove"></div>
-    <br>
-        <br>
+	<h1>Circles</h1>>
 	<div class="buttons">
 		<button onclick="location.href='test.html';">Start Game</button>
 	</div>
