--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>The Circle Game</title>
+    <title>Circles</title>
     <meta name="description" content="My Website">
     <meta name="author" content="Aj Dugger">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -49,7 +49,7 @@
 			<h4 class="items"onclick="goFull()">Go Full Screen</h4>
         </div>
         <div id="header">
-            <h1 >The Circle Game</h1>
+            <h1 >Circles</h1>
 
         </div>
         <div id="startdiv">
