--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-	<h1>Circles</h1>>
+	<h1>Circles</h1>
 	<div class="buttons">
 		<button onclick="location.href='test.html';">Start Game</button>
 	</div>
